[gd_scene load_steps=13 format=3 uid="uid://cwkl4883g2dac"]

[ext_resource type="Script" uid="uid://bgee4sejvqm1h" path="res://scripts/question_4_scene.gd" id="1_8wilw"]
[ext_resource type="Texture2D" uid="uid://cjsm3a5okxuoy" path="res://art assets/textbox sample4.png" id="2_c64id"]
[ext_resource type="Texture2D" uid="uid://b2kvryljv6gdd" path="res://art assets/New_Twisted_.png" id="2_cbtwx"]
[ext_resource type="Texture2D" uid="uid://cyvcvyprjnm2e" path="res://art assets/Lakaru_Angerl.png" id="2_eccsy"]
[ext_resource type="Texture2D" uid="uid://bdwgrdcykpgsw" path="res://art assets/COPS_.png" id="2_nwkik"]
[ext_resource type="Texture2D" uid="uid://7luj6m86xc7f" path="res://art assets/Lakaru_Concerned.png" id="3_32ci4"]
[ext_resource type="FontFile" uid="uid://d304qwinvdngc" path="res://art assets/determination.ttf" id="3_mar64"]
[ext_resource type="Texture2D" uid="uid://caocs3f4y051y" path="res://art assets/New_Background_.png" id="3_nwkik"]
[ext_resource type="Texture2D" uid="uid://c3knxf7hl1ca3" path="res://art assets/Lakaru_Neutral.png" id="4_cbtwx"]

[sub_resource type="Animation" id="Animation_32ci4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("question4:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_eccsy"]
resource_name = "typing_text"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("question4:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cbtwx"]
_data = {
&"RESET": SubResource("Animation_32ci4"),
&"typing_text": SubResource("Animation_eccsy")
}

[node name="Question 4 scene" type="Node2D"]
script = ExtResource("1_8wilw")

[node name="Cops" type="Sprite2D" parent="."]
visible = false
position = Vector2(512.75, 375.5)
scale = Vector2(1.0682292, 1.0828125)
texture = ExtResource("2_nwkik")

[node name="Twisted" type="Sprite2D" parent="."]
visible = false
position = Vector2(512, 374)
scale = Vector2(1.0645833, 1.08125)
texture = ExtResource("2_cbtwx")

[node name="Default" type="Sprite2D" parent="."]
position = Vector2(513.00006, 374)
scale = Vector2(1.0666666, 1.078125)
texture = ExtResource("3_nwkik")

[node name="LakaruAngerl" type="Sprite2D" parent="."]
visible = false
position = Vector2(496, 360)
texture = ExtResource("2_eccsy")

[node name="LakaruConcerned" type="Sprite2D" parent="."]
visible = false
position = Vector2(497, 360)
texture = ExtResource("3_32ci4")

[node name="LakaruNeutral" type="Sprite2D" parent="."]
visible = false
position = Vector2(497, 360)
texture = ExtResource("4_cbtwx")

[node name="TextBox" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(514.50006, 360)
scale = Vector2(4.1319995, 4.7999997)
texture = ExtResource("2_c64id")

[node name="SceneIdentifier" type="RichTextLabel" parent="."]
visible = false
texture_filter = 1
offset_left = 367.0
offset_top = 270.0
offset_right = 511.0
offset_bottom = 300.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("3_mar64")
text = "Question 4 Scene"

[node name="question4" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 149.0
offset_top = 567.0
offset_right = 644.3333
offset_bottom = 610.3334
scale = Vector2(1.5, 1.5)
theme_override_fonts/normal_font = ExtResource("3_mar64")
text = "So tell me, when was the last time you were with them?"
scroll_active = false
visible_characters = 0
visible_ratio = 0.0

[node name="question4Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cbtwx")
}

[node name="ButtonManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Acceptance" type="Button" parent="ButtonManager"]
visible = false
layout_mode = 0
offset_left = 152.0
offset_top = 635.0
offset_right = 473.0
offset_bottom = 692.0
theme_override_fonts/font = ExtResource("3_mar64")
text = "I was with them when it happened."

[node name="Denial" type="Button" parent="ButtonManager"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 495.0
offset_top = 635.0
offset_right = 873.0
offset_bottom = 692.0
theme_override_fonts/font = ExtResource("3_mar64")
text = "I stayed back home while they went on a trip."

[connection signal="pressed" from="ButtonManager/Acceptance" to="." method="_on_acceptance_pressed"]
[connection signal="pressed" from="ButtonManager/Denial" to="." method="_on_denial_pressed"]
